credentials-verification/infra/docker/intdemo-lb-envoy/envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
  - name: landing_page_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: landing_page
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: landing_page_service }
          http_filters:
          - name: envoy.router
  - name: grpc_proxy_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 8080 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_grpcproxy
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/io.iohk" }
                route:
                  cluster: connector_service
                  max_grpc_timeout: 0s
              cors:
                allow_origin_string_match: { suffix: "iohkdev.io" }
                allow_methods: GET, PUT, DELETE, POST, OPTIONS
                allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,userid,userId
                max_age: "1728000"
                expose_headers: grpc-status,grpc-message,userid,userId
          http_filters:
          - name: envoy.grpc_web
          - name: envoy.filters.http.grpc_stats
          - name: envoy.cors
          - name: envoy.router
  - name: connector_grpc_listener
    address:
      socket_address: { address: 0.0.0.0, port_value: 50051 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_grpc
          route_config:
            virtual_hosts:
            - name: connector
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: connector_service }
          http_filters:
          - name: envoy.filters.http.grpc_stats
          - name: envoy.router

  clusters:
  - name: connector_service
    connect_timeout: 5s
    type: strict_dns
    http2_protocol_options: {}
    lb_policy: round_robin
    load_assignment:
      cluster_name: connector_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "$CONNECTOR_ADDRESS"
                port_value: "$CONNECTOR_PORT"
    outlier_detection:
      # eject instance that has failure rate > 50% (default is 85%) ...
      failure_percentage_threshold: 50
      # ... when there are at least two instances active ...
      failure_percentage_minimum_hosts: 2
      # ... for 2 minutes
      base_ejection_time: "120s"
  - name: landing_page_service
    connect_timeout: 5s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: landing_page_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "$LANDING_PAGE_ADDRESS"
                port_value: "$LANDING_PAGE_PORT"
    outlier_detection:
      # eject instance that has failure rate > 50% for 2 minutes, assuming there are at least 2 instances
      failure_percentage_threshold: 50
      failure_percentage_minimum_hosts: 2
      base_ejection_time: "120s"
